--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "custom",
-  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "npx nodemon"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "nodemon": "^3.0.1",
     "uuid": "^9.0.0"
   }
 }
